Localization support for 10 cultures (#100)
* Localization support for 10 cultures
- /Deployment - updated ARM deployment file to add new supported culture and provide default culture option for installers
- /Manifest - created 2 seperate folders for End user and SME users along with localized JSON files
- /Source - modified source code to handle user localized commands for bot, ME and tab capabilities. Application will be able to detect user locale and if supported will show the content accordingly.

* fixed RU typo

* fixed RU typo

* PR comment fixes

* Update azuredeploy.json

* Removed duplicate files

* Incorporated feedback changes

* Handled date as per culture for ME

* Removed unused strings and added comments

* Updated short date format

* Merged GCC changes

* Merged GCC changes

Co-authored-by: Abhijeet Bodhankar (Tata Consultancy Services) <v-abbodh@microsoft.com>
Co-authored-by: Saurabh Rajio Mahajan <v-smahaj@microsoft.com>
Co-authored-by: v-smahaj <60421876+v-smahaj@users.noreply.github.com>

--- a/Source/Microsoft.Teams.Apps.FAQPlusPlus/Properties/Strings.resx
+++ b/Source/Microsoft.Teams.Apps.FAQPlusPlus/Properties/Strings.resx
@@ -259,6 +259,10 @@ I am your friendly Q&amp;A bot that helps you provide support to people who inte
     <value>Share app feedback</value>
     <comment>Title text of share feedback user carousel card.</comment>
   </data>
+  <data name="SubmitButtonText" xml:space="preserve">
+    <value>Submit</value>
+    <comment>Button to submit user activity.</comment>
+  </data>
   <data name="AskAnExpertDisplayText" xml:space="preserve">
     <value>Ask an expert</value>
     <comment>Ask an expert display text: text sent to the bot when ask an expert button is clicked.</comment>
@@ -600,5 +604,17 @@ I am your friendly Q&amp;A bot that helps you provide support to people who inte
   <data name="ShareAppFeedbackRating" xml:space="preserve">
     <value>How helpful is this app? (Required)</value>
     <comment>Feedback for App</comment>
+  </data>
+  <data name="BotCommandAskExpert" xml:space="preserve">
+    <value>Ask an expert</value>
+    <comment>Bot command Ask an expert. This needs to be match with manifest's command "Ask an expert" in translated json file.</comment>
+  </data>
+  <data name="BotCommandFeedback" xml:space="preserve">
+    <value>Share feedback</value>
+    <comment>Bot command Share feedback. This needs to be match with manifest's command "Share feedback" in translated json file.</comment>
+  </data>
+  <data name="BotCommandTour" xml:space="preserve">
+    <value>Take a tour</value>
+    <comment>Bot command Take a tour. This needs to be match with manifest's command "Take a tour" in translated json file.</comment>
   </data>
 </root>
